Colab を使用して作成されました

--- a/Python基礎文法.ipynb
+++ b/Python基礎文法.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7UAGv9habgB1kcFH9Klf2",
+      "authorship_tag": "ABX9TyM3reRnjiTCpzeqrX/HgnTG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1906,9 +1906,22 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# prompt: githubのリポジトリを切り替える\n",
+        "\n",
+        "!git remote set-url origin https://github.com/googlecolab/colabtools.git\n"
+      ],
       "metadata": {
         "id": "3s9wdjT-HXy0"
+      },
+      "execution_count": 108,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "YEE3Wec6IDQ0"
       },
       "execution_count": null,
       "outputs": []
